add header and picture

--- a/main.html
+++ b/main.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Прокатка</title>
 </head>
 
 <body>
-
+    <div class="_head">
+        <div class="kontakt">
+            <h1 class="KT">+375 (29) 999-123-99</h1>
+            <h1 class="KT">Время работы: 8:00-17:00</h1>
+        </div>
+        <div class="messenger">
+            <a href="main.html"><img src="/KR1/picture/telegram.svg" width="50" height="50"></a>
+            <a href="main.html"><img src="/KR1/picture/instagram.svg" width="50" height="50"></a>
+            <a href="main.html"><img src="/KR1/picture/whatsapp.svg" width="50" height="50"></a>
+        </div>
+        <div class="main-icon">
+            <h3 style="color: red;padding-top: 4%;"> ПРОКАТКА</h3>
+            <a href="main.html">
+                <img src="/KR1/picture/cars-icon.svg" width="70" height="70">
+            </a>
+        </div>
+        <div class="link">
+            <a href="main.html" style=" text-decoration: none; color: black;"> ГЛАВНАЯ</a>
+            <a href=" main.html " style=" text-decoration: none; color: black; "> АВТОПАРК</a>
+            <a href="main.html " style=" text-decoration: none; color: black; "> КОНТАКТ</a>
+            <a href="main.html " style=" text-decoration: none; color: black; "> ЦЕНЫ</a>
+        </div>
+    </div>
 </body>
 
 </html>
