add prewie and  picture

--- a/main.html
+++ b/main.html
@@ -16,23 +16,49 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="/KR1/picture/telegram.svg" width="50" height="50"></a>
-            <a href="main.html"><img src="/KR1/picture/instagram.svg" width="50" height="50"></a>
-            <a href="main.html"><img src="/KR1/picture/whatsapp.svg" width="50" height="50"></a>
+            <a href="main.html"><img src="/picture/telegram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="/picture/instagram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="/picture/whatsapp.svg" width="75%" height="75%"></a>
         </div>
         <div class="main-icon">
-            <h3 style="color: red;padding-top: 4%;"> ПРОКАТКА</h3>
-            <a href="main.html">
-                <img src="/KR1/picture/cars-icon.svg" width="70" height="70">
+            <h3 style="color: red;padding-top: 4%;">ПРОКАТКА</h3>
+            <a href="main.html" style="margin-left: 2%;">
+                <img src="/picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
         <div class="link">
-            <a href="main.html" style=" text-decoration: none; color: black;"> ГЛАВНАЯ</a>
-            <a href=" main.html " style=" text-decoration: none; color: black; "> АВТОПАРК</a>
-            <a href="main.html " style=" text-decoration: none; color: black; "> КОНТАКТ</a>
-            <a href="main.html " style=" text-decoration: none; color: black; "> ЦЕНЫ</a>
+            <a href="main.html" style=" text-decoration: none; color: black; font-size: 100%;"> ГЛАВНАЯ</a>
+            <a href=" main.html " style=" text-decoration: none; color: black; font-size: 100%; "> АВТОПАРК</a>
+            <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> КОНТАКТ</a>
+            <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
         </div>
     </div>
+    <div class="main-picture">
+        <div class="picture">
+            <div class="label">
+                <h1 class="oname"> Прокат авто в Гродно<br>любых марок</h1>
+                <ul class="spis">
+                    <li>Доступыные цены от 70 бел. рублей в сутки</li>
+                    <li>Комфортные авто 2015-2023 года выпуска</li>
+                    <li>Все автомобили застрахованы и с ТО</li>
+                </ul>
+                <div class="btt"> <button class="bt1">СВЯЗАТЬСЯ</button></div>
+
+            </div>
+
+
+        </div>
+        <div class="podval">
+            <h1>wdawd</h1>
+            <h1>wdawd</h1>
+            <h1>wdawd</h1>
+
+            <h1>wdawd</h1>
+            <h1>wdawd</h1>
+
+            <h1>wdawd</h1>
+
+        </div>
 </body>
 
 </html>
