--- a/main.html
+++ b/main.html
@@ -48,17 +48,103 @@
 
 
         </div>
-        <div class="podval">
-            <h1>wdawd</h1>
-            <h1>wdawd</h1>
-            <h1>wdawd</h1>
+    </div>
+    <div id="slider-container">
+        <div class="avto">
+            Популярные автомобили
+        </div>
 
-            <h1>wdawd</h1>
-            <h1>wdawd</h1>
+        <div class="blockSlider" id="blockSlider">
+            <div class="FullArea">
+                <div class="imagesArea">
+                    <img class="imageSlider" src="/picture/1.jpg" alt="">
+                    <img class="imageSlider" src="/picture/2.jpg" alt="">
+                    <img class="imageSlider" src="/picture/3.jpeg" alt="">
+                    <img class="imageSlider" src="/picture/4.jpg" alt="">
+                </div>
 
-            <h1>wdawd</h1>
+                <div class="pointsAreaSize">
+                    <span class="point"></span>
+                    <span class="point"></span>
+                    <span class="point"></span>
+                    <span class="point"></span>
+                </div>
+
+                <div class="btnsAreaSize">
+                    <div class="blockArrow" id="leftBtn"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+                    <div class="blockArrow" id="rightBtn"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
+                </div>
+            </div>
 
         </div>
+    </div>
+
+    <div class="podval">
+
+        <div class="osn">
+
+            <div class="left">
+                <div class="element-animation">
+                    <div class="tex">
+                        <h2>Главная</h2>
+                        <h2>Автопарк</h2>
+                        <h2>Цены</h2>
+                        <h2>Условия</h2>
+                        <h2>Новости</h2>
+                        <h2>Контакты</h2>
+                    </div>
+                </div>
+
+                <div class="grd">
+                    <div class="element-animation">
+                        <div class="Grodno">
+                            Гродно
+                        </div>
+                    </div>
+                    <div class="text1">
+                        <div class="element-animation">
+                            <div>+375 29 123 999 12<br> ул.Универская 99-9, офис 666<br> Время работы с 9:00 до 17:00 prokatka@gmail.com
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mes">
+                        <div class="element-animation">
+                            <a href="main.html"><img src="/picture/telegram.svg" width="65%" height="65"></a>
+                        </div>
+                        <div class="element-animation">
+                            <a href="main.html"><img src="/picture/instagram.svg" width="70%" height="70%"></a>
+                        </div>
+                        <div class="element-animation">
+                            <a href="main.html"><img src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+            <div class="right">
+
+                <div class="icon1">
+                    <div class="element-animation icon1"><img src="/picture/cars-icon.svg" width="100%" height="100%"></div>
+                </div>
+
+                <div class="icon2 ">
+                    <div class="element-animation icon2">
+                        <img src="/picture/free-icon-instagram-2111463.png" width="30%" height="40%">
+                        <img src="/picture/free-icon-telegram-2111646.png" width="30%" height="40%">
+                        <img src="/picture/free-icon-vk-2504953.png" width="30%" height="40%">
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+    <script src="/script.js"></script>
+    <script src="/script2.js"></script>
 </body>
 
 </html>
