add 4 files, 2page on website

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylekon.css">
     <title>Прокатка</title>
 </head>
 
@@ -33,52 +33,28 @@
             <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
         </div>
     </div>
-    <div class="main-picture">
-        <div class="picture">
-            <div class="label">
-                <h1 class="oname"> Прокат авто в Гродно<br>любых марок</h1>
-                <ul class="spis">
-                    <li>Доступыные цены от 70 бел. рублей в сутки</li>
-                    <li>Комфортные авто 2015-2023 года выпуска</li>
-                    <li>Все автомобили застрахованы и с ТО</li>
-                </ul>
-                <div class="btt"> <button class="bt1">СВЯЗАТЬСЯ</button></div>
-
-            </div>
-
-
+    <div class="kt">
+        <div class="container">
+            <div class="tel1">Телефоны <br><br> Гродно <br>+375 29 999 123 99 <br> Брест<br> +375 29 123 999 12</div>
+            <div class="adres"><br> Адрес<br>Гродно <br>ул.Универская 99-9, офис 666<br>Брест <br>ул.Практичная 11-1, офис 777</div>
+            <div class="graf"><br> Режим работы каждый день с 8:00-17:00</div>
+            <div class="cont-us">Присоединяйтесь к нам в социальных сетях!</div>
+        </div>
+        <div class="container2">
+            <label for="name">Введите имя </label>
+            <input type="text" class="name" placeholder="Имя">
+            <label for="sname">Введите фамилию</label>
+            <input type="text" class="sname" placeholder="Фамилия">
+            <label for="tel">Введите Телефон</label>
+            <input type="text" class="tel" placeholder="+375(хх) ххх-ххх-хх">
+            <button class="send">Заказать звонок</button>
         </div>
     </div>
-    <div id="slider-container">
-        <div class="avto">
-            Популярные автомобили
-        </div>
-
-        <div class="blockSlider" id="blockSlider">
-            <div class="FullArea">
-                <div class="imagesArea">
-                    <img class="imageSlider" src="/picture/1.jpg" alt="">
-                    <img class="imageSlider" src="/picture/2.jpg" alt="">
-                    <img class="imageSlider" src="/picture/3.jpeg" alt="">
-                    <img class="imageSlider" src="/picture/4.jpg" alt="">
-                </div>
-
-                <div class="pointsAreaSize">
-                    <span class="point"></span>
-                    <span class="point"></span>
-                    <span class="point"></span>
-                    <span class="point"></span>
-                </div>
-
-                <div class="btnsAreaSize">
-                    <div class="blockArrow" id="leftBtn"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
-                    <div class="blockArrow" id="rightBtn"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
-                </div>
-            </div>
-
+    <div class="map">
+        <div class="map1"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9400.49070887772!2d27.583022721386545!3d53.91179590749879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcfb34645b593%3A0xf2624ed8c00a9967!2z0JHQk9Cj0JjQoCDQmtC-0YDQv9GD0YEgOA!5e0!3m2!1sru!2sby!4v1711568255535!5m2!1sru!2sby"
+                width="1200" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-
     <div class="podval">
 
         <div class="osn">
@@ -143,7 +119,7 @@
 
         </div>
     </div>
-    <script src="/script.js"></script>
+
     <script src="/script2.js"></script>
 </body>
 
