--- a/kontakt.html
+++ b/kontakt.html
@@ -32,6 +32,21 @@
             <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: 100%; "> КОНТАКТЫ</a>
             <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
         </div>
+        <div class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="main.html">Главная</a></li>
+                    <li><a href="autopark.html">Автопарк</a></li>
+                    <li><a href="main.html">Цены</a></li>
+                    <li><a href="kontakt.html">Контакты</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <div class="kt">
         <div class="container">
@@ -51,9 +66,9 @@
         </div>
     </div>
     <div class="map">
-        <div class="map1"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9400.49070887772!2d27.583022721386545!3d53.91179590749879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcfb34645b593%3A0xf2624ed8c00a9967!2z0JHQk9Cj0JjQoCDQmtC-0YDQv9GD0YEgOA!5e0!3m2!1sru!2sby!4v1711568255535!5m2!1sru!2sby"
-                width="1200" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        <iframe class="map1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9400.49070887772!2d27.583022721386545!3d53.91179590749879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcfb34645b593%3A0xf2624ed8c00a9967!2z0JHQk9Cj0JjQoCDQmtC-0YDQv9GD0YEgOA!5e0!3m2!1sru!2sby!4v1711568255535!5m2!1sru!2sby"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </div>
     <div class="podval">
 
@@ -86,15 +101,16 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="main.html"><img class="yyy" src="/picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="/picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="/picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
+
 
 
                 </div>
@@ -121,6 +137,7 @@
     </div>
 
     <script src="/script2.js"></script>
+    <script src="/burg.js"></script>
 </body>
 
 </html>
