--- a/main.html
+++ b/main.html
@@ -26,11 +26,31 @@
                 <img src="/picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
+
+
+
         <div class="link">
+
             <a href="main.html" style=" text-decoration: none; color: black; font-size: 100%;"> ГЛАВНАЯ</a>
             <a href="autopark.html" style=" text-decoration: none; color: black; font-size: 100%; "> АВТОПАРК</a>
             <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: 100%; "> КОНТАКТЫ</a>
             <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
+
+        </div>
+        <div class="menu-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="main.html">Главная</a></li>
+                    <li><a href="autopark.html">Автопарк</a></li>
+                    <li><a href="main.html">Цены</a></li>
+                    <li><a href="kontakt.html">Контакты</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
     <div class="main-picture">
@@ -110,13 +130,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="main.html"><img class="yyy" src="/picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="/picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="/picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
@@ -145,6 +165,7 @@
     </div>
     <script src="/script.js"></script>
     <script src="/script2.js"></script>
+    <script src="/burg.js"></script>
 </body>
 
 </html>
