--- a/autopark.html
+++ b/autopark.html
@@ -4,6 +4,9 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="autopark.css">
     <title>Прокатка</title>
@@ -16,14 +19,14 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="/picture/telegram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/instagram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/whatsapp.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/telegram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/instagram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/whatsapp.svg" width="75%" height="75%"></a>
         </div>
         <div class="main-icon">
-            <h3 style="color: red;padding-top: 4%;">ПРОКАТКА</h3>
+            <h3 style="color: #EDDEA4;  -webkit-text-stroke: 1px #000000; padding-top: 4%;">ПРОКАТКА</h3>
             <a href="main.html" style="margin-left: 2%;">
-                <img src="/picture/cars-icon.svg" width="85%" height="50%">
+                <img src="picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
         <div class="link">
@@ -53,7 +56,7 @@
         <div class="namecont">Наши автомобили</div>
         <div class="cars">
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/1.jpg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/1.jpg"> </div>
                 <div class="part2">
                     <div class="glname">Skoda Octavia</div>
                     <sec class="name">
@@ -66,7 +69,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/2.jpg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/2.jpg"> </div>
                 <div class="part2">
                     <div class="glname">lada Vesta</div>
                     <sec class="name">
@@ -79,7 +82,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/3.jpeg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/3.jpeg"> </div>
                 <div class="part2">
                     <div class="glname">Haval</div>
                     <sec class="name">
@@ -92,7 +95,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/4.jpg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/4.jpg"> </div>
                 <div class="part2">
                     <div class="glname">Mazda 626</div>
                     <sec class="name">
@@ -105,7 +108,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/5.png"> </div>
+                <div class="part1"><img class="imgggg" src="picture/5.png"> </div>
                 <div class="part2">
                     <div class="glname">Audi A8</div>
                     <sec class="name">
@@ -118,7 +121,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/6.jpg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/6.jpg"> </div>
                 <div class="part2">
                     <div class="glname">BMW X5M</div>
                     <sec class="name">
@@ -131,7 +134,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/8.jpg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/8.jpg"> </div>
                 <div class="part2">
                     <div class="glname">Touta Camry</div>
                     <sec class="name">
@@ -144,7 +147,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/9.jpeg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/9.jpeg"> </div>
                 <div class="part2">
                     <div class="glname">Kia K5</div>
                     <sec class="name">
@@ -157,7 +160,7 @@
                 </div>
             </div>
             <div class="block">
-                <div class="part1"><img class="imgggg" src="/picture/7.jpeg"> </div>
+                <div class="part1"><img class="imgggg" src="picture/7.jpeg"> </div>
                 <div class="part2">
                     <div class="glname">Mersedes Maybax</div>
                     <sec class="name">
@@ -205,13 +208,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img class="yyy" src="/picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="main.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
@@ -223,14 +226,14 @@
             <div class="right">
 
                 <div class="icon1">
-                    <div class="element-animation icon1"><img src="/picture/cars-icon.svg" width="100%" height="100%"></div>
+                    <div class="element-animation icon1"><img src="picture/cars-icon.svg" width="100%" height="100%"></div>
                 </div>
 
                 <div class="icon2 ">
                     <div class="element-animation icon2">
-                        <img src="/picture/free-icon-instagram-2111463.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-telegram-2111646.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-vk-2504953.png" width="30%" height="40%">
+                        <img src="picture/free-icon-instagram-2111463.png" width="30%" height="40%">
+                        <img src="picture/free-icon-telegram-2111646.png" width="30%" height="40%">
+                        <img src="picture/free-icon-vk-2504953.png" width="30%" height="40%">
                     </div>
                 </div>
             </div>
@@ -239,8 +242,8 @@
         </div>
     </div>
 
-    <script src="/script2.js"></script>
-    <script src="/burg.js"></script>
+    <script src="script2.js"></script>
+    <script src="burg.js"></script>
 </body>
 
 </html>
