--- a/kontakt.html
+++ b/kontakt.html
@@ -4,6 +4,9 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylekon.css">
     <title>Прокатка</title>
@@ -16,14 +19,14 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="/picture/telegram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/instagram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/whatsapp.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/telegram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/instagram.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/whatsapp.svg" width="75%" height="75%"></a>
         </div>
         <div class="main-icon">
-            <h3 style="color: red;padding-top: 4%;">ПРОКАТКА</h3>
+            <h3 style="color: #EDDEA4;  -webkit-text-stroke: 1px #000000; padding-top: 4%;">ПРОКАТКА</h3>
             <a href="main.html" style="margin-left: 2%;">
-                <img src="/picture/cars-icon.svg" width="85%" height="50%">
+                <img src="picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
         <div class="link">
@@ -101,13 +104,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img class="yyy" src="/picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="main.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
@@ -120,14 +123,14 @@
             <div class="right">
 
                 <div class="icon1">
-                    <div class="element-animation icon1"><img src="/picture/cars-icon.svg" width="100%" height="100%"></div>
+                    <div class="element-animation icon1"><img src="picture/cars-icon.svg" width="100%" height="100%"></div>
                 </div>
 
                 <div class="icon2 ">
                     <div class="element-animation icon2">
-                        <img src="/picture/free-icon-instagram-2111463.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-telegram-2111646.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-vk-2504953.png" width="30%" height="40%">
+                        <img src="picture/free-icon-instagram-2111463.png" width="30%" height="40%">
+                        <img src="picture/free-icon-telegram-2111646.png" width="30%" height="40%">
+                        <img src="picture/free-icon-vk-2504953.png" width="30%" height="40%">
                     </div>
                 </div>
             </div>
@@ -136,8 +139,8 @@
         </div>
     </div>
 
-    <script src="/script2.js"></script>
-    <script src="/burg.js"></script>
+    <script src="script2.js"></script>
+    <script src="burg.js"></script>
 </body>
 
 </html>
