--- a/main.html
+++ b/main.html
@@ -4,6 +4,9 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Прокатка</title>
@@ -16,14 +19,14 @@
             <h1 class="KT">Время работы: 8:00-17:00</h1>
         </div>
         <div class="messenger">
-            <a href="main.html"><img src="/picture/telegram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/instagram.svg" width="75%" height="75%"></a>
-            <a href="main.html"><img src="/picture/whatsapp.svg" width="75%" height="75%"></a>
+            <a href="main.html"><img src="picture/telegram.svg" width="60%" height="60%"></a>
+            <a href="main.html"><img src="picture/instagram.svg" width="60%" height="60%"></a>
+            <a href="main.html"><img src="picture/whatsapp.svg" width="60%" height="60%"></a>
         </div>
         <div class="main-icon">
-            <h3 style="color: red;padding-top: 4%;">ПРОКАТКА</h3>
+            <h3 style="color: #EDDEA4;  -webkit-text-stroke: 1px #000000; padding-top: 4%;">ПРОКАТКА</h3>
             <a href="main.html" style="margin-left: 2%;">
-                <img src="/picture/cars-icon.svg" width="85%" height="50%">
+                <img src="picture/cars-icon.svg" width="85%" height="50%">
             </a>
         </div>
 
@@ -31,10 +34,10 @@
 
         <div class="link">
 
-            <a href="main.html" style=" text-decoration: none; color: black; font-size: 100%;"> ГЛАВНАЯ</a>
-            <a href="autopark.html" style=" text-decoration: none; color: black; font-size: 100%; "> АВТОПАРК</a>
-            <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: 100%; "> КОНТАКТЫ</a>
-            <a href="main.html " style=" text-decoration: none; color: black; font-size: 100%; "> ЦЕНЫ</a>
+            <a href="main.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ГЛАВНАЯ</a>
+            <a href="autopark.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> АВТОПАРК</a>
+            <a href="kontakt.html" style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> КОНТАКТЫ</a>
+            <a href="main.html " style=" text-decoration: none; color: black; font-size: calc(10px + (6 + 6 * 0.7) * ((100vw - 350px) / 1180));"> ЦЕНЫ</a>
 
         </div>
         <div class="menu-btn">
@@ -77,10 +80,10 @@
         <div class="blockSlider" id="blockSlider">
             <div class="FullArea">
                 <div class="imagesArea">
-                    <img class="imageSlider" src="/picture/1.jpg" alt="">
-                    <img class="imageSlider" src="/picture/2.jpg" alt="">
-                    <img class="imageSlider" src="/picture/3.jpeg" alt="">
-                    <img class="imageSlider" src="/picture/4.jpg" alt="">
+                    <img class="imageSlider" src="picture/1.jpg" alt="">
+                    <img class="imageSlider" src="picture/2.jpg" alt="">
+                    <img class="imageSlider" src="picture/3.jpeg" alt="">
+                    <img class="imageSlider" src="picture/4.jpg" alt="">
                 </div>
 
                 <div class="pointsAreaSize">
@@ -106,12 +109,10 @@
             <div class="left">
                 <div class="element-animation">
                     <div class="tex">
-                        <h2>Главная</h2>
-                        <h2>Автопарк</h2>
-                        <h2>Цены</h2>
-                        <h2>Условия</h2>
-                        <h2>Новости</h2>
-                        <h2>Контакты</h2>
+                        <h2><a href="main.html">Главная</a></h2>
+                    <h2><a href="autopark.html">Автопарк</a></h2>
+                    <h2><a href="main.html">Цены</a></h2>
+                    <h2><a href="kontakt.html">Контакты</a></h2>
                     </div>
                 </div>
 
@@ -130,13 +131,13 @@
 
                     <div class="mes">
                         <div class="element-animation">
-                            <a href="main.html"><img class="yyy" src="/picture/telegram.svg" width="65%" height="65"></a>
+                            <a href="main.html"><img class="yyy" src="picture/telegram.svg" width="65%" height="65"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/instagram.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/instagram.svg" width="70%" height="70%"></a>
                         </div>
                         <div class="element-animation">
-                            <a href="main.html"><img lass="yy" src="/picture/whatsapp.svg" width="70%" height="70%"></a>
+                            <a href="main.html"><img lass="yy" src="picture/whatsapp.svg" width="70%" height="70%"></a>
                         </div>
                     </div>
 
@@ -148,14 +149,14 @@
             <div class="right">
 
                 <div class="icon1">
-                    <div class="element-animation icon1"><img src="/picture/cars-icon.svg" width="100%" height="100%"></div>
+                    <div class="element-animation icon1"><img src="picture/cars-icon.svg" width="100%" height="100%"></div>
                 </div>
 
                 <div class="icon2 ">
                     <div class="element-animation icon2">
-                        <img src="/picture/free-icon-instagram-2111463.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-telegram-2111646.png" width="30%" height="40%">
-                        <img src="/picture/free-icon-vk-2504953.png" width="30%" height="40%">
+                        <img src="picture/free-icon-instagram-2111463.png" width="30%" height="40%">
+                        <img src="picture/free-icon-telegram-2111646.png" width="30%" height="40%">
+                        <img src="picture/free-icon-vk-2504953.png" width="30%" height="40%">
                     </div>
                 </div>
             </div>
@@ -163,9 +164,9 @@
 
         </div>
     </div>
-    <script src="/script.js"></script>
-    <script src="/script2.js"></script>
-    <script src="/burg.js"></script>
+    <script src="script.js"></script>
+    <script src="script2.js"></script>
+    <script src="burg.js"></script>
 </body>
 
 </html>
